--- a/stylus/components/dropdown.styl
+++ b/stylus/components/dropdown.styl
@@ -1,24 +1,13 @@
 .s-
   &dropdown
-    border-left: 1px solid transparent
-    border-right: 1px solid transparent
+    border-left: $borderWidth solid transparent
+    border-right: $borderWidth solid transparent
     > a:after
       content: "\f0d7"
       font-family: 'FontAwesome'
       margin-left: 5px
     > ul
       display: none
-      position: absolute
-      background-color: white
-      margin-top: ($buttonSpacingV/2)
-      border: 1px solid $lightBorder
-      border-top: 0px
-      margin: 0
-      > li
-        margin: 0 
-        > a
-          padding: $buttonSpacingV $buttonSpacingH
-          display: block
     &.s-dropdown_clicked
       margin-top: (-1 * ($space/5))
       margin-bottom: (-1 * ($space/5))
@@ -28,6 +17,18 @@
       border-color: $lightBorder
       > ul
         display: block
+        margin-left: (-1 * $borderWidth)
+        position: absolute
+        background-color: white
+        margin-top: ($buttonSpacingV/2)
+        border: $borderWidth solid $lightBorder
+        border-top: 0px
+        margin: 0
+        > li
+          margin: 0 
+          > a
+            padding: $buttonSpacingV $buttonSpacingH
+            display: block
         > li > a
           &:hover
             background-color: white
