--- a/jade/layout.jade
+++ b/jade/layout.jade
@@ -2,8 +2,9 @@ doctype html
 html(lang="en")
   head
     link(rel="stylesheet" href="css/start.css")
-  body.s-wrapper
+  body.s-wrapper(style="padding-top: 40px")
     header
+      block header
       h1 Start.css Test Page
       hr
     main
