--- a/stylus/components/dropdown.styl
+++ b/stylus/components/dropdown.styl
@@ -10,11 +10,13 @@
       background-color: $darkGrey
       > a
         color: white
+        &:hover
+          background-color: $black
       > ul
         display: block
         margin-left: (-1 * $borderWidth)
         position: absolute
-        background-color: $grey
+        background-color: $darkGrey
         margin-top: ($buttonSpacingV/2)
         margin: 0
         > li
@@ -25,6 +27,6 @@
             color: white
         > li > a
           &:hover
-            background-color: $darkGrey
-          &:active
             background-color: $black
+          &:active
+            background-color: black
