--- a/stylus/components/dropdown.styl
+++ b/stylus/components/dropdown.styl
@@ -13,7 +13,7 @@
         &:hover
           background-color: $black
       > ul
-        display: block
+        display: block !important
         margin-left: (-1 * $borderWidth)
         position: absolute
         background-color: $darkGrey
