--- a/jade/index.jade
+++ b/jade/index.jade
@@ -16,6 +16,33 @@ block header
         li
           input(type="search" placeholder="Name")
         li.s-dropdown
+          a(href="#") Directory
+          ul
+            li
+              a(href="index.html") Sandbox
+            li
+              a(href="index2.html") Realistic
+      ul.s-right
+        li
+          a(href="#") Item
+  .s-wrapper
+    h1 Start.css Test Page
+    hr
+
+block content
+  .s-wrapper
+    nav.s-bar
+      ul
+        li
+          
+          a(href="#") 
+            span.s-left.fa.fa-search
+            |  Item
+        li
+          a(href="#") Item
+        li
+          input(type="search" placeholder="Name")
+        li.s-dropdown
           a(href="#") Dropdown
           ul
             li
@@ -25,206 +52,185 @@ block header
       ul.s-right
         li
           a(href="#") Item
+    nav.s-bar
+      ul
+        li
+          a.s-btn#modal(href="#") Item
+        li
+          a.s-btn.s-red(href="#") Item
+        li
+          a.s-btn.s-orange(href="#") Item
+        li
+          a.s-btn.s-yellow(href="#") Item
+        li
+          a.s-btn.s-green(href="#") Item
+        li
+          a.s-btn.s-blue(href="#") Item
+        li
+          a.s-btn.s-violet(href="#") Item
+      ul.s-right
+        li
+          a.s-btn(href="#") Item
+    nav.s-bar
+      ul
+        li
+          a(href="#") Item
+        li
+          a.s-btn(href="#") Item
+        li
+          a(href="#") Item
+      ul.s-right
+        li
+          a(href="#") Item
+        li
+          a.s-btn(href="#") Item
+        li
+          a(href="#") Item
+    nav.s-bar
+      ul
+        li
+          a.s-bar-heading(href="#") Website
+        li
+          a(href="#") Item
+        li Item that is not a link.
+        li
+          a.s-btn(href="#") Item
+        li
+          a(href="#") Item
+      ul.s-right
+        li
+          a(href="#") Item
+        li
+          a.s-btn(href="#") Item
+        li
+          a(href="#") Item
+    article.s-row
+      .s-col.s-4
+        nav.s-bar
+          ul
+            li
+              a.s-bar-heading(href="#") Website
+            li
+              a(href="#") Item
+            li Item that is not a link.
+            li
+              a.s-btn(href="#") Item
+            li
+              a(href="#") Item
+          ul.s-right
+            li
+              a(href="#") Item
+            li
+              a.s-btn(href="#") Item
+            li
+              a(href="#") Item
+      .s-col.s-4
+        nav.s-bar
+          ul
+            li
+              a.s-btn(href="#") Item
+            li 
+              a.s-btn(href="#") Item
+            li
+              a.s-btn(href="#") Item
+            li
+              a.s-btn(href="#") Item
+          ul.s-right
+            li
+              a.s-btn(href="#") Item
+            li
+              a.s-btn(href="#") Item
+            li
+              a(href="#") Item
+      .s-col.s-4
+        nav.s-bar
+          ul
+            li
+              a.s-btn(href="#") Item
+            li Item that is not a link.
+            li
+              a.s-btn(href="#") Item
+            li
+              a(href="#") Item
+          ul.s-right
+            li
+              a.s-btn(href="#") Item
+            li
+              a.s-btn(href="#") Item
+            li
+              a(href="#") Item
+    article.s-row
+      .s-col.s-sm-6.s-md-4.s-lg-3 
+        h5 Heading
+        p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      .s-col.s-sm-6.s-md-4.s-lg-3 
+        h5 Heading
+        p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        nav.s-bar
+          ul
+            li
+              a(href="#") Toolbar 
+          ul.s-right
+            li
+              a.s-btn.s-blue(href="#") Save
+        p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      .s-col.s-sm-6.s-md-4.s-lg-3 
+        h5 Heading
+        p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      .s-col.s-sm-6.s-md-4.s-lg-3 
+        h5 Heading
+        p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
-block content
+    hr
 
-  nav.s-bar
-    ul
-      li
-        
-        a(href="#") 
-          span.s-left.fa.fa-search
-          |  Item
-      li
-        a(href="#") Item
-      li
-        input(type="search" placeholder="Name")
-      li.s-dropdown
-        a(href="#") Dropdown
-        ul
-          li
-            a(href="#") Dropdown Item
-          li
-            a(href="#") Dropdown Item
-    ul.s-right
-      li
-        a(href="#") Item
-  nav.s-bar
-    ul
-      li
-        a.s-btn#modal(href="#") Item
-      li
-        a.s-btn.s-red(href="#") Item
-      li
-        a.s-btn.s-orange(href="#") Item
-      li
-        a.s-btn.s-yellow(href="#") Item
-      li
-        a.s-btn.s-green(href="#") Item
-      li
-        a.s-btn.s-blue(href="#") Item
-      li
-        a.s-btn.s-violet(href="#") Item
-    ul.s-right
-      li
-        a.s-btn(href="#") Item
-  nav.s-bar
-    ul
-      li
-        a(href="#") Item
-      li
-        a.s-btn(href="#") Item
-      li
-        a(href="#") Item
-    ul.s-right
-      li
-        a(href="#") Item
-      li
-        a.s-btn(href="#") Item
-      li
-        a(href="#") Item
-  nav.s-bar
-    ul
-      li
-        a.s-bar-heading(href="#") Website
-      li
-        a(href="#") Item
-      li Item that is not a link.
-      li
-        a.s-btn(href="#") Item
-      li
-        a(href="#") Item
-    ul.s-right
-      li
-        a(href="#") Item
-      li
-        a.s-btn(href="#") Item
-      li
-        a(href="#") Item
-  article.s-row
-    .s-col.s-4
-      nav.s-bar
-        ul
-          li
-            a.s-bar-heading(href="#") Website
-          li
-            a(href="#") Item
-          li Item that is not a link.
-          li
-            a.s-btn(href="#") Item
-          li
-            a(href="#") Item
-        ul.s-right
-          li
-            a(href="#") Item
-          li
-            a.s-btn(href="#") Item
-          li
-            a(href="#") Item
-    .s-col.s-4
-      nav.s-bar
-        ul
-          li
-            a.s-btn(href="#") Item
-          li 
-            a.s-btn(href="#") Item
-          li
-            a.s-btn(href="#") Item
-          li
-            a.s-btn(href="#") Item
-        ul.s-right
-          li
-            a.s-btn(href="#") Item
-          li
-            a.s-btn(href="#") Item
-          li
-            a(href="#") Item
-    .s-col.s-4
-      nav.s-bar
-        ul
-          li
-            a.s-btn(href="#") Item
-          li Item that is not a link.
-          li
-            a.s-btn(href="#") Item
-          li
-            a(href="#") Item
-        ul.s-right
-          li
-            a.s-btn(href="#") Item
-          li
-            a.s-btn(href="#") Item
-          li
-            a(href="#") Item
-  article.s-row
-    .s-col.s-sm-6.s-md-4.s-lg-3 
-      h5 Heading
-      p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    .s-col.s-sm-6.s-md-4.s-lg-3 
-      h5 Heading
-      p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    .s-col.s-sm-6.s-md-4.s-lg-3 
-      h5 Heading
-      p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    .s-col.s-sm-6.s-md-4.s-lg-3 
-      h5 Heading
-      p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    h1 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    h2 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    h3 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    h4 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    h5 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 
-  hr
+    hr
 
-  h1 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-  tempor incididunt ut labore et dolore magna aliqua.
-  h2 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-  tempor incididunt ut labore et dolore magna aliqua.
-  h3 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-  tempor incididunt ut labore et dolore magna aliqua.
-  h4 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-  tempor incididunt ut labore et dolore magna aliqua.
-  h5 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-  tempor incididunt ut labore et dolore magna aliqua.
-  p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    h1 Heading 1
+    p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    h2 Heading 2
+    p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    h3 Heading 3
+    p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    h4 Heading 4
+    p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    h5 Heading 5
+    p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 
-  hr
+    hr
 
-  h1 Heading 1
-  p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-  h2 Heading 2
-  p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-  h3 Heading 3
-  p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-  h4 Heading 4
-  p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-  h5 Heading 5
-  p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    article.s-row
+      .s-col.s-sm-3
+        h1 3 Columns
+      .s-col.s-sm-9
+        h1 9 Columns
 
-  hr
+    .s-modal
+      header
+        h5 Modal Title
+          small.s-close &times;
+      main
+        p Modal content
+      footer
+        span Some text
+        button.s-btn.s-blue Go
 
-  article.s-row
-    .s-col.s-sm-3
-      h1 3 Columns
-    .s-col.s-sm-9
-      h1 9 Columns
+    hr
 
-  .s-modal
-    header
-      h5 Modal Title
-        small.s-close &times;
-    main
-      p Modal content
-    footer
-      span Some text
-      button.s-btn.s-blue Go
-
-  hr
-
-  h1 Heading 1
-  p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-  blockquote Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-  h2 Heading 2
-  p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-  h3 Heading 3
-  p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-  h4 Heading 4
-  p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-  h5 Heading 5
-  p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    h1 Heading 1
+    p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    blockquote Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+    h2 Heading 2
+    p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    h3 Heading 3
+    p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    h4 Heading 4
+    p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    h5 Heading 5
+    p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
