--- a/stylus/components/button.styl
+++ b/stylus/components/button.styl
@@ -1,4 +1,8 @@
 .s-
+  &dark
+    .s-btn
+      background-color: $darkGrey
+      color: white
   &btn
     padding: $buttonSpacingV $buttonSpacingH
     background-color: lightgray
@@ -31,3 +35,11 @@
       &violet
         background-color: $violet
         color: white
+      &dark
+        background-color: $darkGrey
+        color: white
+      &clear
+        background-color: transparent
+        color: $blue
+        text-decoration: underline
+        box-shadow(0px -3px 0px 0px rgba(0, 0, 0, 0))
