--- a/stylus/components/form.styl
+++ b/stylus/components/form.styl
@@ -17,6 +17,7 @@ input
     font-size: $font-baseSize
     padding: $buttonSpacingV
     border-radius($buttonBorderRadius)
+    width: 100%
     &:hover
       background-color: white
     &:active, &:focus
