--- a/stylus/components/bar.styl
+++ b/stylus/components/bar.styl
@@ -55,4 +55,25 @@
       top: 0
       left: 0
       right: 0
-      border-radius($buttonBorderRadius buttonBorderRadius 0 0)
+      border-radius(0 0 0 0)
+    &.s-clear
+      background-color: transparent
+    &.s-dark
+      background-color: $black
+      a:not(.s-btn)
+        color: white
+    input
+      &[type="text"],
+      &[type="email"],
+      &[type="search"],
+      &[type="date"],
+      &[type="datetime"],
+      &[type="datetime-local"],
+      &[type="month"],
+      &[type="number"],
+      &[type="password"],
+      &[type="tel"],
+      &[type="time"],
+      &[type="url"],
+      &[type="week"]
+        width: auto
