--- a/stylus/components/modal.styl
+++ b/stylus/components/modal.styl
@@ -33,10 +33,8 @@
 
 .s-modal
   display: none
-  width: 500px
-  left: 50%
+  width: 100%
   top: 50px
-  margin-left: -250px
   min-height: 100px
   background-color: #fff
   box-shadow(0px 0px 25px 10px rgba(0,0,0,0.4))
@@ -61,14 +59,15 @@
   .s-btn
     margin-left: 5px
   footer
-    text-align: right
-    padding: 0 $space
     background-color: $lightGrey
     margin: 0 (-1 * $space)
-    overflow: hidden
     border-radius(0px 0px 5px 5px)
-    *
-      margin: ($space/2) 0
     &:before
       display: table
       content: ' '
+
+@media screen and (min-width: 768px)
+  .s-modal
+    left: 50%
+    width: 700px
+    margin-left: -350px
