--- a/stylus/base/typography.styl
+++ b/stylus/base/typography.styl
@@ -29,6 +29,11 @@ body
   color: $black
   line-height: $font-baseLineHeight
 
+a
+  link-styles()
+  &:visited:not(.s-btn)
+    color: $violet
+
 h1
   font-size: $font-headings-baseSize + 20
   margin: $space 0
