--- a/jade/index.jade
+++ b/jade/index.jade
@@ -73,6 +73,13 @@ block content
         li
           a.s-btn.s-violet(href="#") Item
       ul.s-right
+        li.s-dropdown
+          button.s-btn.s-violet Dropdown
+          ul
+            li
+              a(href="#") Dropdown Item
+            li
+              a(href="#") Dropdown Item
         li
           a.s-btn(href="#") Item
     nav.s-bar
