--- a/jade/index2.jade
+++ b/jade/index2.jade
@@ -17,7 +17,14 @@ block header
           a(href="#") Item
 
         li.s-dropdown
-          a(href="#") Dropdown
+          a(href="#") Dropdown1
+          ul
+            li
+              a(href="index.html") Sandbox
+            li
+              a(href="index2.html") Realistic
+        li.s-dropdown
+          a(href="#") Dropdown2
           ul
             li
               a(href="index.html") Sandbox
