--- a/stylus/components/dropdown.styl
+++ b/stylus/components/dropdown.styl
@@ -1,37 +1,39 @@
 .s-
   &dropdown
-    > a:after
+    > a:after, > button:after, > input:after
       content: "\f0d7"
       font-family: 'FontAwesome'
       margin-left: 5px
     > ul
       display: none
-    &.s-dropdown_clicked
-      background-color: $darkGrey
+
+.dropdown_open
+  .s-dropdown:hover
+    background-color: $darkGrey
+    border-radius($buttonBorderRadius $buttonBorderRadius 0 0)
+    > a
+      color: white
       border-radius($buttonBorderRadius $buttonBorderRadius 0 0)
-      > a
-        color: white
-        border-radius($buttonBorderRadius $buttonBorderRadius 0 0)
+      &:hover
+        background-color: $black
+    > ul
+      display: block !important
+      margin-left: (-1 * $borderWidth)
+      position: absolute
+      background-color: $darkGrey
+      margin-top: ($buttonSpacingV/2)
+      margin: 0
+      width: 200px
+      border-radius(0 $buttonBorderRadius $buttonBorderRadius $buttonBorderRadius)
+      > li
+        margin: 0 
+        > a
+          padding: $buttonSpacingV $buttonSpacingH
+          border-radius(0 $buttonBorderRadius $buttonBorderRadius $buttonBorderRadius)
+          display: block
+          color: white
+      > li > a
         &:hover
           background-color: $black
-      > ul
-        display: block !important
-        margin-left: (-1 * $borderWidth)
-        position: absolute
-        background-color: $darkGrey
-        margin-top: ($buttonSpacingV/2)
-        margin: 0
-        width: 200px
-        border-radius(0 $buttonBorderRadius $buttonBorderRadius $buttonBorderRadius)
-        > li
-          margin: 0 
-          > a
-            padding: $buttonSpacingV $buttonSpacingH
-            border-radius(0 $buttonBorderRadius $buttonBorderRadius $buttonBorderRadius)
-            display: block
-            color: white
-        > li > a
-          &:hover
-            background-color: $black
-          &:active
-            background-color: black
+        &:active
+          background-color: black
