--- a/jade/index.jade
+++ b/jade/index.jade
@@ -1,11 +1,11 @@
 extends layout
 
 block header
-  nav.s-bar.s-fixed
+  nav.s-box.s-fixed
     .s-wrapper
       ul
         li
-          a.s-bar-heading(href="#") Website
+          a.s-box-heading(href="#") Website
         li
           
           a(href="#") 
@@ -35,7 +35,7 @@ block content
       p To learn more, 
         a(href="#abc") Read this.
     .s-break
-    nav.s-bar
+    nav.s-box
       ul
         li
           
@@ -56,7 +56,7 @@ block content
       ul.s-right
         li
           a(href="#") Item
-    nav.s-bar
+    nav.s-box
       ul
         li
           a.s-btn#modal(href="#") Item
@@ -82,7 +82,7 @@ block content
               a(href="#") Dropdown Item
         li
           a.s-btn(href="#") Item
-    nav.s-bar
+    nav.s-box
       ul
         li
           a(href="#") Item
@@ -97,10 +97,10 @@ block content
           a.s-btn(href="#") Item
         li
           a(href="#") Item
-    nav.s-bar
+    nav.s-box
       ul
         li
-          a.s-bar-heading(href="#") Website
+          a.s-box-heading(href="#") Website
         li
           a(href="#") Item
         li Item that is not a link.
@@ -117,10 +117,10 @@ block content
           a(href="#") Item
     article.s-row
       .s-col.s-4
-        nav.s-bar
+        nav.s-box
           ul
             li
-              a.s-bar-heading(href="#") Website
+              a.s-box-heading(href="#") Website
             li
               a(href="#") Item
             li Item that is not a link.
@@ -136,7 +136,7 @@ block content
             li
               a(href="#") Item
       .s-col.s-4
-        nav.s-bar
+        nav.s-box
           ul
             li
               a.s-btn(href="#") Item
@@ -154,7 +154,7 @@ block content
             li
               a(href="#") Item
       .s-col.s-4
-        nav.s-bar
+        nav.s-box
           ul
             li
               a.s-btn(href="#") Item
@@ -172,7 +172,7 @@ block content
               a(href="#") Item
     article.s-row
       .s-col.s-4
-        nav.s-bar
+        nav.s-box
           ul
             li
               a.s-btn(href="#") Item
@@ -181,7 +181,7 @@ block content
             li
               a(href="#") Item
       .s-col.s-4
-        nav.s-bar.s-dark
+        nav.s-box.s-dark
           ul
             li
               a.s-btn(href="#") Item
@@ -190,7 +190,7 @@ block content
             li
               a(href="#") Item
       .s-col.s-4
-        nav.s-bar.s-clear
+        nav.s-box.s-clear
           ul
             li
               a.s-btn(href="#") Item
@@ -205,7 +205,7 @@ block content
       .s-col.s-sm-6.s-md-4.s-lg-3 
         h5 Heading
         p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        nav.s-bar
+        nav.s-box
           ul
             li
               a(href="#") Toolbar 
@@ -256,7 +256,7 @@ block content
           small.s-close &times;
       main
         p Modal content
-      footer.s-bar
+      footer.s-box
         ul
           li
             a.s-btn.s-clear(href="#") Cancel
