--- a/stylus/base/typography.styl
+++ b/stylus/base/typography.styl
@@ -31,7 +31,7 @@ body
 
 a
   link-styles()
-  &:visited:not(.s-btn)
+  &:visited:not(.s-btn):not(.s-close)
     color: $violet
 
 h1
@@ -58,7 +58,7 @@ blockquote
     font-size: 70px
     margin-left: -30px
 
-a.s-btn, .s-bar a
+a.s-btn, .s-box a
   text-decoration: none
 
 // COLORS
