--- a/stylus/components/button.styl
+++ b/stylus/components/button.styl
@@ -46,3 +46,6 @@
           color: darken($blue, 25%)
         &:active
           color: darken($blue, 50%)
+    i
+      margin-bottom: 0
+      color: inherit
