--- a/stylus/components/index.styl
+++ b/stylus/components/index.styl
@@ -1,6 +1,7 @@
 @import "modal"
-@import "hr"
-@import "bar"
+@import "misc"
+@import "box"
+@import "growl"
 @import "button"
 @import "form"
 @import "dropdown"
